Arreglado errores varios y pulido algunas cosas.